--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@
 }
 
 .basket_main .basket_list > ul > li .item_image {
-  min-height: 88px;
+  min-height: 92px;
 }
 
 
@@ -367,6 +367,10 @@
   font-size: 20px;
   font-family: "Open Sans";
   font-weight: 400;
+}
+
+.basket_main .total_basket > div dl dd:last-child {
+  color: #6bb515;
 }
 
 .basket_main .total_basket a.checkout {
