--- a/css/main.css
+++ b/css/main.css
@@ -724,3 +724,31 @@ aside#aside_block.active.show_me {
   font-size: 13px !important;
   line-height: 16px !important;
 }
+
+body.overflow .full_nav {
+  overflow: hidden;
+}
+body .full_nav::after  {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-animation-duration: 0.45s;
+  -webkit-transition: all 0.45s ease-in-out;
+  -moz-animation-duration: 0.45s;
+  -moz-transition: all 0.45s ease-in-out;
+  animation-duration: 0.45s;
+  transition: all 0.45s ease-in-out;
+}
+
+body.overflow .full_nav::after  {
+  display: block;
+  visibility: visible;
+  opacity: 0.4;
+}
